--- a/ChickenTinder/ChickenTinder/Client/wwwroot/manifest.json
+++ b/ChickenTinder/ChickenTinder/Client/wwwroot/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "ChickenTinder",
-  "short_name": "ChickenTinder",
+  "name": "Chicken Tinder",
+  "short_name": "Chicken",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#03173d",
+  "theme_color": "#9b2915",
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "icon-512.png",
+      "src": "icon-512-full.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "icon-192.png",
+      "src": "icon-192-full.png",
       "type": "image/png",
       "sizes": "192x192"
     }
