added error handling

--- a/ChickenTinder/ChickenTinder/Server/appsettings.json
+++ b/ChickenTinder/ChickenTinder/Server/appsettings.json
@@ -2,8 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore.SignalR": "Debug"
     }
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*"
 }
